--- a/HW16/Dockerfile
+++ b/HW16/Dockerfile
@@ -1,4 +1,5 @@
 FROM ubuntu
+RUN apt-get update && apt-get install -y iputils-ping && rm -rf /var/lib/apt/lists/*
 COPY script.sh .
 RUN chmod 755 script.sh
 ENTRYPOINT [ "./script.sh" ]
