HW18, edit task3 Dockerfile

--- a/HW18/task3/Dockerfile
+++ b/HW18/task3/Dockerfile
@@ -1,11 +1,4 @@
 FROM alpine
 RUN apk update && \
-    apk --no-cache add curl && \
-    apk --no-cache add tcpdump && \
-    apk --no-cache add tcptraceroute && \
-    apk --no-cache add netcat-openbsd && \
-    apk --no-cache add vim && \
-    apk --no-cache add mysql && \
-    apk --no-cache add python3 && \
-    apk --no-cache add go && \
+    apk --no-cache add curl tcpdump tcptraceroute netcat-openbsd vim mysql python3 go && \
     rm -rf /var/cache/apk/*
