--- a/HW20/roles/hw201/tasks/repo.yml
+++ b/HW20/roles/hw201/tasks/repo.yml
@@ -1,6 +1,6 @@
 - name: Clone git repositories
   become: true
   ansible.builtin.git:
-    repo: "{{ repo  }}"
-    dest: /home/"{{  user  }}"
+    repo: "{{  repo  }}"
+    dest: "{{  git_repo  }}"
     clone: yes
