--- a/HW20/group_vars/Centos/Centos.yml
+++ b/HW20/group_vars/Centos/Centos.yml
@@ -1,3 +1,6 @@
 group_hw20: ZONE_1
-group: wheel
-copy_file: curl-7.61.1-14.el8_3.1.x86_64.rpm
+sudo_group: wheel
+copy:
+  - file: curl-7.61.1-14.el8_3.1.x86_64.rpm
+    dest: tmp
+    mode: "0755"
