--- a/HW20/group_vars/Ubuntu/Ubuntu.yml
+++ b/HW20/group_vars/Ubuntu/Ubuntu.yml
@@ -1,3 +1,6 @@
 group_hw20: ZONE_2
-group: sudo
-copy_file: curl_7.68.0-1ubuntu2.5_amd64.deb
+sudo_group: sudo
+copy:
+  - file: curl_7.68.0-1ubuntu2.5_amd64.deb
+    dest: tmp
+    mode: "0755"
