--- a/HW20/roles/hw202/tasks/install.yml
+++ b/HW20/roles/hw202/tasks/install.yml
@@ -1,12 +1,14 @@
 - name: Install a .deb package
   become: true
-  apt:
-    deb: tmp/curl_7.68.0-1ubuntu2.5_amd64.deb
+  ansible.builtin.apt:
+    deb: "tmp/{{  item.file  }}"
+  loop: "{{  copy  }}"  
   when: ansible_facts['os_family'] == "Debian"
 
 - name: Install a .rpm package
   become: true
-  yum:
-    name: tmp/curl-7.61.1-14.el8_3.1.x86_64.rpm
+  ansible.builtin.yum:
+    name: "tmp/{{  item.file  }}"
     state: present
+  loop: "{{  copy  }}"
   when: ansible_facts['os_family'] == "RedHat"
