--- a/HW20/roles/hw202/tasks/template.yml
+++ b/HW20/roles/hw202/tasks/template.yml
@@ -1,5 +1,6 @@
 - name: Template file
   become: true
   ansible.builtin.template:
-    src:  "{{ template_src }}"
-    dest: "{{ template_dest }}"
+    src:  "{{ item.src }}"
+    dest: "{{ item.dest }}"
+  loop: "{{  template  }}"
