--- a/HW21/group_vars/Linux/Linux.yml
+++ b/HW21/group_vars/Linux/Linux.yml
@@ -1,21 +1,23 @@
 ansible_user: vagrant
 ansible_ssh_private_key_file: ~/.ssh/id_rsa
-packages: 
-  - git
-  - python3
+packages_docker: 
   - docker-ce
   - docker-ce-cli
   - containerd.io
+
 users:
   - name: hw20
     shell: /bin/sh
     home_dir: /opt/hw20
 repo: https://github.com/Gritskov-Vitaliy/Test_repo.git
 template:
-  - src: zone.j2
-    dest: tmp/HW20_FILE_INFO
+  - { src: "zone.j2", dest: "tmp/HW20_FILE_INFO", owner: "root", mode: "0755" }
+  - { src: "systemd.j2", dest: "/etc/systemd/system/logger.service", owner: root, mode: "0755" }
+  - { src: "script.j2", dest: "/usr/local/bin/script.sh", owner: "root", mode: "0755" }
+ExecStart: /usr/local/bin/script.sh
 git_repo: tmp/git_repo
 permission:
   - owner: "{{  users.name  }}"
     path: "{{  copy.dest  }}"
     mode: 0755
+logfile: "~/log_ip"
