--- a/HW21/roles/hw201/tasks/install.yml
+++ b/HW21/roles/hw201/tasks/install.yml
@@ -18,12 +18,28 @@
         state: present
   when: ansible_facts['os_family'] == "Debian" 
 
-- name: Install packages
+- name: Install packages on Ubuntu
+  become: true
+  ansible.builtin.package:
+    name: "{{  item.name  }}={{  item.version  }}"
+    state: present
+  loop: "{{  packages  }}"
+  when: ansible_facts['os_family'] == "Debian" 
+
+- name: Install packages on Centos
+  become: true
+  ansible.builtin.package:
+    name: "{{  item.name  }}-{{  item.version  }}"
+    state: present
+  loop: "{{  packages  }}"
+  when: ansible_facts['os_family'] == "RedHat" 
+
+- name: Install Docker
   become: true
   ansible.builtin.package:
     name: "{{  item  }}"
     state: present
-  loop: "{{  packages  }}"
+  loop: "{{  packages_docker  }}"
 
 - name: Start and enable the Docker daemon
   become: true
