--- a/HW22/group_vars/Linux/Linux.yml
+++ b/HW22/group_vars/Linux/Linux.yml
@@ -1,22 +1,20 @@
 ansible_user: vagrant
 ansible_ssh_private_key_file: ~/.ssh/id_rsa
-packages: 
-  - git
-  - python3
-  - docker-ce
-  - docker-ce-cli
-  - containerd.io
 users:
-  - name: hw20
-    shell: /bin/sh
-    home_dir: /opt/hw20
-repo: https://github.com/Gritskov-Vitaliy/Test_repo.git
-template:
-  - { src: "zone.j2", dest: "tmp/HW20_FILE_INFO", owner: "root", mode: "0755" }
-  - { src: "systemd.j2", dest: "/etc/systemd/system/logger.service", owner: root, mode: "0755" }
+  - { name: hw21_1, shell: /bin/sh, home_dir: /opt/hw21_1, groups: ""}
+  - { name: hw21_2, shell: /bin/sh, home_dir: /opt/hw21_2, groups: ""}
+log_service_template:
+  - { src: "systemd.j2", dest: "/etc/systemd/system/logger.service", owner: "root", mode: "0755" }
   - { src: "script.j2", dest: "/usr/local/bin/script.sh", owner: "root", mode: "0755" }
-git_repo: tmp/git_repo
-permission:
-  - owner: "{{  users.name  }}"
-    path: "{{  copy.dest  }}"
-    mode: 0755
+  - { src: "logrotate.j2", dest: "/etc/logrotate.d/logsysd", owner: "root", mode: "0755" }
+ExecStart: /usr/local/bin/script.sh
+log_service:
+  period: weekly
+  rotate: 5
+  compress: compress
+  logfile_locate: "~/log_ip.txt"
+  logfile_permission: "0755"
+local_hostslist:
+  name: "hosts_list.txt"
+  mode: "0755"
+hostipfile_dest: "~/"
