--- a/HW22/roles/hw22/tasks/users.yml
+++ b/HW22/roles/hw22/tasks/users.yml
@@ -6,7 +6,7 @@
   ansible.builtin.debug:
     msg: "Users password: {{  user_pass  }}"
 
-- name: Add users
+- name: Add users using loop
   ansible.builtin.user:
    name: "{{ item.name }}"
    shell: "{{ item.shell }}"
@@ -17,4 +17,18 @@
   loop: "{{ users }}"
   no_log: true
   become: true
+  when: user_add_method == "loop"
+
+- name: Add users using with
+  ansible.builtin.user:
+   name: "{{ item.name }}"
+   shell: "{{ item.shell }}"
+   home: "{{ item.home_dir }}"
+   groups: "{{ item.groups }}"
+   password: "{{ user_pass }}"
+   state: present
+  with_items: "{{ users }}"
+  no_log: true
+  become: true
+  when: user_add_method == "with"
 
